testsuite/tests/properties/invalid_lambda_arg_type/mapcat_no_index/test.lkt
from common import BaseExampleBlock, Example, FooNode, IndexedItem

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.mapcat((e: Int) => [e.as_bare_entity, e.as_bare_entity])
}
